--- a/app/views/monitor/live-present.html
+++ b/app/views/monitor/live-present.html
@@ -27,7 +27,7 @@ GOV.UK prototype kit
 
       <!--  TABS FOR TYPES OF EVENT STATUS  -->
 
-      <form action="/create-event/new" method="get" class="form">
+      <form method="get" class="form">
 
         <div class="tabs" style="margin-top:30px;">
 
@@ -163,6 +163,8 @@ GOV.UK prototype kit
             <!--  Checking  -->
             <div class="tabs-panel" id="checkin" >
               <div class="tabs-panel-inner">
+
+                <p style="margin-top:50px;"><span class="heading-xlarge">0 / 17</span> checked in</p>
 
                 {% include "includes/checkin-list.html" %}
 
