--- a/app/views/includes/checkin-list.html
+++ b/app/views/includes/checkin-list.html
@@ -1,20 +1,35 @@
 
 <!--  MACRO TO MAKE EACH LIVE LINE ITEM -->
-{% macro regiseredPerson(name, jobtitle, company, sector, phone, email) %}
+{% macro regiseredPerson(name, jobtitle, company, sector, phone, email, number) %}
 <tr  style="border-bottom: 1px solid #bfc1c3;">
 
-  <td valign="top" style="border: 0px; padding-top: 22px; padding-bottom: 21px; width:75%px;">
+  <td valign="top" style="border: 0px; padding-top: 32px; padding-bottom: 25px; width:55%;">
     <p style="font-weight:700; margin:0;">{{ name }}</p>
   </td>
 
-  <td valign="top" style="border: 0px; padding-top: 15px; padding-bottom: 16px;">
+  <td valign="top" style="border: 0px; padding-top: 18px; padding-bottom: 16px;">
+
     <div style="float:right">
-      <input type="submit" class="button" formaction="#" value="Check in">
+      <input type="submit" class="button" value="Check in"  formaction="#"  onclick="checkin(this)" style="margin-top:px;">
+      <div class="js-hidden">
+        <p style="margin-top:0px; margin-bottom:0px;">Checked in  <br><a href="#">Undo check-in</a></p>
+      </div>
+
     </div>
 
   </td>
 
 </tr>
+
+
+<script>
+  function checkin(button)
+  {
+    console.log("button is " + jQuery(button).parent());
+    jQuery(button).parent().children()[0].classList.add("js-hidden");
+    jQuery(button).parent().children()[1].classList.remove("js-hidden");
+  }
+</script>
 
 
 {% endmacro %}
@@ -32,11 +47,50 @@
 
       <tbody>
 
-      <!-- EVENT ONE  -->
-        {{ regiseredPerson('Joe Desiato', 'CEO', 'Firefield LTD', 'Apparel', '07865 595 588', 'joe.desiato@gmail.com') }}
-        {{ regiseredPerson('Guy Nociar', 'Head of sales', 'Meat professionals  south east', 'Food and drink', '07375 357 382', 'g.nociar@meatSE.com') }}
-        {{ regiseredPerson('Peter Tristram', 'CEO', 'Magic Cars ltd', 'Toys', '07711 736 845', 'peter.tristram@megiccars.com') }}
-        {{ regiseredPerson('Pietro Phillips', 'Export lead', 'Motor Oils West LTD', 'Apparel', '07969 228 316', 'p.phillips@outlook.com') }}
+      {% if session.trackingTotalReg == 2 %}
+      {{ regiseredPerson('Joe Desiato', 'CEO', 'Firefield LTD', 'Apparel', '07865 595 588', 'joe.desiato@gmail.com', true, 1) }}
+      {{ regiseredPerson('Guy Nociar', 'Head of sales', 'Meat professionals  south east', 'Food and drink', '07375 357 382', 'g.nociar@meatSE.com', true, 2) }}
+
+      {% elif session.trackingTotalReg == 10 %}
+
+      {{ regiseredPerson('Joe Desiato', 'CEO', 'Firefield LTD', 'Apparel', '07865 595 588', 'joe.desiato@gmail.com', true) }}
+      {{ regiseredPerson('Guy Nociar', 'Head of sales', 'Meat professionals  south east', 'Food and drink', '07375 357 382', 'g.nociar@meatSE.com', true) }}
+
+      {{ regiseredPerson('Henry Brown', 'CEO', 'Crane Electronics Ltd.', 'Electronics & IT hardware', '07933465544', 'henry@crane.co.uk', true) }}
+      {{ regiseredPerson('Geoff Clooney', 'International Sales Director', 'Crystalclear Aspects Ltd', 'Chemicals', '07986366723', 'geoff@crystalclear.co.uk', false) }}
+      {{ regiseredPerson('Katie Howard', 'Finance Manager', 'CWSEC Ltd', 'Construction', '07974652277', 'katie@cwsec.com', true) }}
+      {{ regiseredPerson('Robert McKinley', 'Sales Executive', 'David Jerome Ltd', 'Communications', '07933465544', 'robert@jerome.co.uk', false) }}
+      {{ regiseredPerson('Charlotte Walsh', 'Creative Director', 'Dianne Illsley', 'Creative & Media', '07986366723', 'charlotte@diannecreative.com', false) }}
+
+      {{ regiseredPerson('Gavin Bell', 'Sales Manager', 'Direct Trade Bags Company Ltd', 'Household Goods, Furniture & Furnishings', '07974652277', 'gavin@tradebags.co.uk', false) }}
+      {{ regiseredPerson('Deepak Patel', 'Head of Engineering', 'Dy-Pack UK Ltd', 'Mining', '07933465544', 'deepak@dypack.com', false) }}
+      {{ regiseredPerson('Mohammed Akram', 'International Sales Manager', 'Elat3d Ltd', 'Mining', '07986366723', 'moh@elat3d.com', false) }}
+
+      {% elif session.trackingTotalReg == 17 %}
+
+      {{ regiseredPerson('Joe Desiato', 'CEO', 'Firefield LTD', 'Apparel', '07865 595 588', 'joe.desiato@gmail.com', true) }}
+      {{ regiseredPerson('Guy Nociar', 'Head of sales', 'Meat professionals  south east', 'Food and drink', '07375 357 382', 'g.nociar@meatSE.com', true) }}
+
+      {{ regiseredPerson('Henry Brown', 'CEO', 'Crane Electronics Ltd.', 'Electronics & IT hardware', '07933465544', 'henry@crane.co.uk', true) }}
+      {{ regiseredPerson('Geoff Clooney', 'International Sales Director', 'Crystalclear Aspects Ltd', 'Chemicals', '07986366723', 'geoff@crystalclear.co.uk', false) }}
+      {{ regiseredPerson('Katie Howard', 'Finance Manager', 'CWSEC Ltd', 'Construction', '07974652277', 'katie@cwsec.com', true) }}
+      {{ regiseredPerson('Robert McKinley', 'Sales Executive', 'David Jerome Ltd', 'Communications', '07933465544', 'robert@jerome.co.uk', false) }}
+      {{ regiseredPerson('Charlotte Walsh', 'Creative Director', 'Dianne Illsley', 'Creative & Media', '07986366723', 'charlotte@diannecreative.com', false) }}
+
+      {{ regiseredPerson('Gavin Bell', 'Sales Manager', 'Direct Trade Bags Company Ltd', 'Household Goods, Furniture & Furnishings', '07974652277', 'gavin@tradebags.co.uk', false) }}
+      {{ regiseredPerson('Deepak Patel', 'Head of Engineering', 'Dy-Pack UK Ltd', 'Mining', '07933465544', 'deepak@dypack.com', false) }}
+      {{ regiseredPerson('Mohammed Akram', 'International Sales Manager', 'Elat3d Ltd', 'Mining', '07986366723', 'moh@elat3d.com', false) }}
+      {{ regiseredPerson('Jane Green', 'Director', 'Empirical Science Education CIC', 'Education & Training', '07974652277', 'jane@science.co.uk', true) }}
+      {{ regiseredPerson('Nadia Panucci', 'Sales Executive', 'Jet Pumps UK Ltd', 'Environment & Water', '07933465544', 'nadia@jetpumps.com') }}
+
+      {{ regiseredPerson('Connor Shaw', 'Chief Engineer', 'Equiture Limited', 'Oil & Gas', '07986366723', 'connor@equiture.co.uk', false) }}
+      {{ regiseredPerson('Victoria O Leary', 'Creative Consultant', 'Fi Burke Contemporary Art', 'Creative & Media', '07974652277', 'victoria@burke.com', false) }}
+      {{ regiseredPerson('Solomon Yakubu', 'Marketing Manager', 'Illuminow Ltd', 'Oil & Gas', '07933465544', 'solomon@illuminow.co.uk', false) }}
+      {{ regiseredPerson('Joseph Goldberg', 'Chief Finance Officer', 'IMS Risk Solutions Ltd', 'Advanced Engineering', '07986366723', 'joseph@ims.co.uk', true) }}
+      {{ regiseredPerson('Magda Michalenko', 'International Growth Manager', 'India Impex (UK) Ltd', 'Mining', '07974652277', 'magda@impex.com', true) }}
+
+      {% endif  %}
+
 
       </tbody>
     </table>
