loads of fixes to create

--- a/app/views/create-event/attendees.html
+++ b/app/views/create-event/attendees.html
@@ -46,7 +46,7 @@
 	  <form action="/create-event/attendee-onwards" method="get" class="form">
 
 
-		  <p>In order to register for any event, prospective attendees will always need to provide their:</p>
+		  <p>The following default fields will be included on your event registration form:</p>
 		  <ul class="list list-bullet">
 			  <li>full name</li>
 			  <li>job title</li>
@@ -59,7 +59,7 @@
 		  </ul>
 
 		  <br>
-		  <p>The above fields will automatically appear on this event's registration form.</p>
+		  <!-- <p>The above fields will automatically appear on this event's registration form.</p>  -->
 
 
 
