--- a/app/views/includes/tracking-links.html
+++ b/app/views/includes/tracking-links.html
@@ -68,7 +68,7 @@
         <div>
       {% endif %}
 
-          <input type="submit" class="button-secondary" formaction="/monitor/add-tracking-link" value="Generate lik">
+          <input type="submit" class="button-secondary" formaction="/monitor/add-tracking-link" value="Generate link">
 
       {% if errorTrackingName %}
         </div>
