--- a/app/views/monitor/live-present.html
+++ b/app/views/monitor/live-present.html
@@ -35,7 +35,7 @@ GOV.UK prototype kit
             <ul class="tabs-list">
               <li><a class="stats" href="#stats" style="text-decoration: none;">Performance</a></li>
               <li><a class="track-links" href="#track-links" style="text-decoration: none;">Tracking links</a></li>
-              <li><a class="reg-people" href="#reg-people" style="text-decoration: none;">Registered people</a></li>
+              <li><a class="reg-people" href="#reg-people" style="text-decoration: none;">Registrations</a></li>
               <li><a class="checkin" href="#checkin" style="text-decoration: none;">Check-in</a></li>
             </ul>
           </div>
@@ -62,7 +62,7 @@ GOV.UK prototype kit
                   <div style="float:right; width:28%;  margin-top:8px;">
                     <div style="margin-left:40px">
                       <p style="margin-bottom:0px"><span class="heading-large">20</span> ticket capacity</p>
-                      <p style="margin-top:0px"><a href="#">Change amount of tickets</a></p>
+                      <p style="margin-top:0px"><a href="#">Edit event capacity</a></p>
                     </div>
                   </div>
                 </div>
